--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,9 @@
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-[*.js]
-charset = utf-8
-
-[*.{js,jsx,json}]
 indent_style = space
-indent_size = 4
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+end_of_line = lf
