--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "typeface-roboto": "0.0.54"
   },
